# cosupdateservice

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  INSTALL.org  LICENSE.org  README.org  config.h.cmake
data/: 105-cosupdateservice.preset  CMakeLists.txt  cosupdateproxy.service.in  cosupdatesearch.service.in  cosupdatesearch.timer.in  cosupdateservice.preset  cosupdateservice.privileges  cosupdateservice.service.in
data/conf.d/: 05-mandatoryVariables.ini  10-defaults.ini
doc/: architecture.org  configuration.org  release_aggregation.org
rpm/: cosupdateservice.spec
src/: .dir-locals.el  CMakeLists.txt  CosuOsUpdateServiceInfo.h  CosuOsUpdateServiceProxy.cpp  CosuOsUpdateServiceProxy.h  CosuOsUpdateServiceProxyService.cpp  CosuPackageKit.cpp  CosuPackageKit.h  CosuResolveAbstract.cpp  CosuResolveAbstract.h  CosuService.cpp  CosuService.h  CosuServiceRuntime.cpp  CosuServiceRuntime.h  CosuSettings.cpp  CosuSettings.h  CosuTrigger.cpp  CosuVariables.cpp  CosuVariables.h  CosuZypp.cpp  CosuZypp.h  main.cpp
tests/: CMakeLists.txt  testCosuService.cpp  testCosuServiceRuntime.cpp  testCosuSettings.cpp  testCosuVariables.cpp  testCosuZypp.cpp
tests/data/actual/etc/: 15-featureUpdateSource.ini
tests/data/actual/lib/: 05-service.ini  10-featureUpdateSource.ini  20-device.ini
tests/data/actual/verifyServiceRuntime/: verifyServiceRuntime_actual.ini
tests/data/expected/: verifyServiceRuntime_expected.ini  verifySettingsShadowed_expected.ini  verifySettings_expected.ini
tests/data/serviceData/: 6-testDeviceInfo.ini
